[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/ScoreBall.gd" type="Script" id=1]
[ext_resource path="res://assets/particles/ScoreBall.tres" type="Material" id=2]
[ext_resource path="res://assets/pink_particleng.png" type="Texture" id=3]
[ext_resource path="res://assets/industrial.v2.png" type="Texture" id=4]
[ext_resource path="res://assets/light_01.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=5]

[sub_resource type="CircleShape2D" id=8]
radius = 6.23681

[node name="ScoreBall" type="Node2D"]
script = ExtResource( 1 )

[node name="Particle1" type="Particles2D" parent="."]
material = SubResource( 5 )
rotation = -1.57079
amount = 5
speed_scale = 0.7
randomness = 0.3
draw_order = 1
process_material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 208, 256, 16, 16 )

[node name="Particle2" type="Particles2D" parent="."]
material = SubResource( 5 )
rotation = -1.57079
amount = 5
lifetime = 1.1
speed_scale = 0.7
randomness = 0.3
draw_order = 1
process_material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 5 )
texture_scale = 0.15
color = Color( 0.203922, 0.0470588, 0.231373, 1 )
energy = 0.8
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
